the form now displays errors succcesfully, but still stuck on how to get rid of errors when the user inputs details correctly. And also to prevent the error from duplicating upon multiple clicks

--- a/style.css
+++ b/style.css
@@ -14,30 +14,26 @@ body {
     background-color: hsl(0, 100%, 74%);
 }
 
-.container {
-  height: 70%;
-}
-
 .text {
     flex-direction: column;
-    padding: 70px;
+    padding: 50px;
     color: white;
 }
 
 .text h1 {
     color: white;
-    font-size: 48px;
+    font-size: 43px;
     font-weight: 700;
 }
     
 
 #trial {
     width: 100%;
-    height: 70px;
+    height: 60px;
     border-radius: 10px;
     background-color: hsl(248, 32%, 49%);
     color: white;
-    /* box-shadow: 0 7px 20px; */
+    /* box-shadow: 0 7px 20px ; */
     }
 
 #trial span {
@@ -49,7 +45,7 @@ form {
     padding: 30px 40px;
     background-color: white;
     border-radius: 10px;
-    padding: 50px;
+    position: relative;
 }
 
 #submit {
@@ -59,21 +55,24 @@ form {
 input {
     width: 100%;
     height: 50px;
-    margin-bottom: 1rem;
     border-radius: 5px;
     padding-left: 30px;
     border: solid 1px hsl(246, 25%, 77%);
     font-weight: 500;
+    outline-color: black;
+    
 }
 
  #submit {
     background-color: hsl(154, 59%, 51%);
     color: white;
+    margin-bottom: 1rem;
  }
 #terms {
     text-align: center;
     font-size: 11px;
-    color: hsl(246, 25%, 77%); ;
+    color: hsl(246, 25%, 77%); 
+    margin-bottom: 1rem;
 }
 
 #terms a {
@@ -81,6 +80,29 @@ input {
     color: hsl(0, 100%, 74%) ;
     font-weight: 700;
 }
+
+.error {
+    font-size: 12px;
+    color:hsl(0, 100%, 74%);
+    font-weight: 600;
+    float: right;
+}
+
+.error-icon {
+    position: absolute;
+    margin-top: 12px;
+    right: 75px;
+    
+}
+
+
+
+
+
+
+
+
+
 
 
 
